--- a/whishlist/whishlist/Views/FourSquare/Callback.cshtml
+++ b/whishlist/whishlist/Views/FourSquare/Callback.cshtml
@@ -1,23 +1,26 @@
-﻿@{
-    var jss = new System.Web.Script.Serialization.JavaScriptSerializer();
-    var recentVenues = jss.Serialize(ViewBag.RecentVenues);
-    var wl = jss.Serialize(ViewBag.WhishList);
-}
-<div class="container" style="">
-    <div id="whishlistcontainer">
-        <h2>Whishlist</h2>
-        <div class="row" style="border-radius: 25px; border: 2px solid #8AC007; padding: 20px;">
-            <div id="spinnerWhishlist" style="   width:100px;    height: 100px;    position: relative;    top: 50%;    left: 50%;    background:url(/content/images/loading.gif) no-repeat center #fff;         overflow: auto;">            </div>
-            <div data-bind="foreach: whishlist">
-                <div class="col-md-2 col-sm-4 col-xs-12" style="position: relative">
-                    <div class="row">
-                        <div data-bind='text: VenueName' style="float: left; font-weight: bold; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; width: 80%;"></div>
-                    </div>
-                    <div class="row">
-                        <button data-bind="click: $root.removeFromWhishlist" type="button" style="position: absolute; left: 78px; bottom: 1px;">Remove</button>
-                        <img data-bind="attr:{'src': VenuePictureUrl}" style="width: 150px; height: auto;" />
-                        <div style="position: absolute; left: 78px; top: 25px;">
-                            <img data-bind="attr:{'src': UserPictureUrl}" style="border: 3px solid #BADA55; width: 70px; height: 70px; background-repeat: no-repeat; background-position: 50%; border-radius: 50%;" />
+﻿<div class="container">
+    <div id="titleAndUserInfo" class="row col-md-12">
+        <h2 id="titleWishlist" class="left">Whishlist</h2>
+        <div class="right">
+            <div id="userPicture"></div>
+            <div id="userName"></div>
+        </div>
+    </div>
+    <div class="row " id="whishlistcontainer">
+        <div class="row col-xs-12">
+            <div id="addedContainer" class="row">
+                <div id="spinnerWhishlist" class="spinner"></div>
+                <div data-bind="foreach: whishlist">
+                    <div class="col-md-2 col-sm-4 col-xs-12 whishlistItem">
+                        <div class="row">
+                            <div data-bind='text: VenueName' class="whishlistVenueName"></div>
+                        </div>
+                        <div class="row">
+                            <button data-bind="click: $root.removeFromWhishlist" type="button" class="buttonAdd">Del</button>
+                            <img data-bind="attr:{'src': VenuePictureUrl}" class="whishlistImg" />
+                            <div>
+                                <img data-bind="attr:{'src': UserPictureUrl}" class="whishlistUserImg" />
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -28,108 +31,29 @@
         <hr>
     </div>
     <h2>Recent Venues</h2>
-    <div class="row" style="border-radius: 25px; border: 2px solid #8AC007; padding: 20px;">
-        <div id="spinnerRecent" style="   width:100px;    height: 100px;    position: relative;    top: 50%;    left: 50%;    background:url(/content/images/loading.gif) no-repeat center #fff;         overflow: auto;">            </div>
+    <div id="recentContainer" class="row">
+        <div id="spinnerRecent" class="spinner"></div>
         <div data-bind="foreach: recent">
-
-            <div class="col-md-6 col-sm-4 col-xs-12" style="position: relative">
-                <img data-bind="attr:{'src': VenuePictureUrl}" style="" />
-                <div style="float: right;">
-                    <div data-bind='text: VenueName'></div>
-                    <div data-bind='text: VenueId'></div>
-                    <div data-bind='text: UserId'></div>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="recentItemContainer">
+                    <img data-bind="attr:{'src': VenuePictureUrl}" class="recentVenueImg" />
+                    <div class="recentTextContainer">
+                        <div data-bind='text: VenueName' class="recentVenueName"></div>
+                        <div class="recentData">Description:</div>
+                        <div data-bind='text: Description'></div>
+                        <div class="recentData">Email:</div>
+                        <div data-bind='text: Email'></div>
+                        <div class="recentData">Street:</div>
+                        <div data-bind='text: Street'></div>
+                        <button data-bind="click: $root.addToWhishlist" type="button">Add</button>
+                    </div>
+                    <div>
+                        <img data-bind="attr:{'src': UserPictureUrl}" class="recentUserImg" />
+                    </div>
                 </div>
-                <div style="position: absolute; left: 200px; top: 0px;">
-                    <img data-bind="attr:{'src': UserPictureUrl}" style="border: 3px solid #BADA55; width: 70px; height: 70px; background-repeat: no-repeat; background-position: 50%; border-radius: 50%;" />
-                </div>
-                <button data-bind="click: $root.addToWhishlist" type="button">Add</button>
             </div>
         </div>
     </div>
 </div>
 
-<script>      
-    function mappedItem(data) {
-        this.VenueName = ko.observable(data.VenueName);
-        this.VenueId = ko.observable(data.VenueId);
-        this.UserId = ko.observable(data.UserId);
-        this.VenuePictureUrl = ko.observable(data.VenuePictureUrl);
-        this.UserPictureUrl = ko.observable(data.UserPictureUrl);
-    }
-
-    function whishlistViewModel() {
-        var self = this;
-        self.recent = ko.observableArray([]);
-        self.whishlist = ko.observableArray([]);
-
-        //var recentVenues = JSON.parse(data.recentVenues);        
-        //var wl = JSON.parse(data.whishlist);
-        
-
-        self.addToWhishlist = function (item) {
-            $.post("/api/whishlist/additem", item, function (data) {
-                item.WhishListItemId = data;
-                self.whishlist.push(item);
-                self.recent.remove(item);
-                if ((self.whishlist().length > 0) && (!$('#whishlistcontainer').is(':visible'))) {
-                    $("#whishlistcontainer").slideDown();
-                }
-            });
-        }
-
-        self.removeFromWhishlist = function (item) {
-            $.post("/api/whishlist/removeitem?id=" + item.WhishListItemId, function (data) {
-                item.WhishListItemId = 0;
-                self.recent.push(item);
-                self.whishlist.remove(item);
-                if (self.whishlist().length == 0) {
-                    $("#whishlistcontainer").slideUp();
-                }
-            });
-        }
-
-        $.get("/api/whishlist/GetWhishlist", function (data) {
-            var mappedWhishlist = $.map(data, function (item) { return new mappedItem(item) });
-            self.whishlist(mappedWhishlist);
-            $("#spinnerWhishlist").hide();
-        });
-
-        $.get("/api/whishlist/GetRecentVenues?code=" + getURLParameter("code"), function (data) {
-            var mappedRecent = $.map(data, function (item) { return new mappedItem(item) });
-            self.recent(mappedRecent);
-            $("#spinnerRecent").hide();
-        });        
-    }
-
-    ko.applyBindings(new whishlistViewModel());
-
-    function getURLParameter(name) {
-        return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20')) || null
-    }
-
-    
-    
-</script>
-
-@*<div class="container" style="background: red;  margin-right: -15px;  margin-left: -15px; min-height: 100%; 
-  min-height: 100vh; ">
-
-    <div >                   
-
-            @foreach (var item in ViewBag.RecentVenues)
-            {                      
-                <div  class="col-md-1"></div>
-                    <div  class="col-md-4"style=" background: blue; border: 3px green solid;  padding-right: 15px;  padding-left: 15px;">
-                        <div>
-                            <img src="@item.VenuePictureUrl" alt="Smiley face" height="256" width="256"></div>
-                        <div style="position: absolute; z-index: 1; top: 9px; right: 205px; border: 1px white solid; display: block;">
-                            <img src="@item.UserPictureUrl" alt="Smiley face" height="42" width="42"></div>
-                        <button style="position: absolute; z-index: 1; top: 220px; right: 10px; border: 1px white solid; display: block;" type="button">+</button>
-                    </div>
-                <div  class="col-md-1"></div>
-            }
-        
-    </div>
-
-</div>*@
-
+<script src="@Url.Content("~/Scripts/whishlist.js")" type="text/javascript"></script>
