--- a/whishlist/whishlist/Views/Shared/_Layout.cshtml
+++ b/whishlist/whishlist/Views/Shared/_Layout.cshtml
@@ -9,8 +9,9 @@
         
     <script src="@Url.Content("~/Scripts/jquery-1.11.3.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>    
-    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>    
     <link href="@Url.Content("~/Content/bootstrap/bootstrap.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/whishlist.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
     @RenderBody()
